--- a/animal-stylesheet.css
+++ b/animal-stylesheet.css
@@ -10,3 +10,11 @@ img{
   width: 300px;
   float: left;
 }
+body {
+  font-family: cambria;
+  color: grey;
+}
+.body h2 {
+  font-style: italic;
+  color: hotpink;
+}
