--- a/animal-stylesheet.css
+++ b/animal-stylesheet.css
@@ -18,3 +18,9 @@ body {
   font-style: italic;
   color: hotpink;
 }
+.box {
+  margin: auto;
+  width: 200%;
+  border: 3px solid green;
+  padding: 10px;
+}
