--- a/animal-stylesheet.css
+++ b/animal-stylesheet.css
@@ -20,7 +20,11 @@ body {
 }
 .box {
   margin: auto;
-  width: 200%;
+  width: 500%;
   border: 3px solid green;
   padding: 10px;
+}
+.center {
+  text-align: center;
+  border: 3px solid black
 }
